---------------------------------------------------------------------------------------------------
Version: 0.69.84
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.83
Date: 2025-07-15
  Changes:
    - Fixed bug where trashsteroid shadows would permanently exist on your map.
    - Preparing for wind turbine UPS improvement.
    - Fixed incompat with BZTin messing with rocket silo recipe, leading to a softlock.
---------------------------------------------------------------------------------------------------
Version: 0.69.82
Date: 2025-07-13
  Changes:
    - Made some yeetibng recipes visible in factoriopedia to help new players.
    - Added tips and tricks section:
      ► Crapapult
      ► Rocketizer
      ► Craptonite wall
      ► Garbo grabber
    - Made nicer debug functions.
    - Trashsteroid speed now fluctuates (it was supposed to before)
    - Bugfix for players being removed from multiplayer games (reported by DoubleThought).
---------------------------------------------------------------------------------------------------
Version: 0.69.81
Date: 2025-07-12
  Changes:
    - More crushing industry compat.
    - Compat with both K2SO + bzcarbon at the same time.
---------------------------------------------------------------------------------------------------
Version: 0.69.80
Date: 2025-07-11
  Changes:
    - New Recipe: Biofusion science can now be used to make promethium science with fewer promethium chunks.
    - Biochamber productivity bonus has been made more granular. 10 ranks of +5% instead of 5 ranks of +10%. It's also more expensive now for the top rank.
      ► Everyone's research rank has been migrated to avoid any lost progress.
---------------------------------------------------------------------------------------------------
Version: 0.69.79
Date: 2025-07-10
  Changes:
    - Fixed lore typo
    - Added 4 new lore entries. Including some hazards.