@@ -1,3 +1,4 @@
+local common_compat_prototypess = require("__rubia__.compat.common-compat-prototypes")
 
 --BZ Tin makes pumpjacks uncraftable
 if mods["bztin"] then
@@ -28,7 +29,6 @@ end
 
 --Both these mods change the recipe for green circuits.
 if mods["bzcarbon"] or mods["bztin"] then
-    local common_compat_prototypess = require("__rubia__.compat.common-compat-prototypes")
     local green_circ = common_compat_prototypess["electronic-circuit-recipe"]
     data:extend({green_circ})
     rubia_lib.compat.add_recipe_to_technology("rubia-progression-stage1", green_circ.name)
@@ -36,7 +36,6 @@ end
 
 --If we have K2SO AND bzcarbon, then the steel-plate recipe gets graphite
 if mods["bzcarbon"] and mods["Krastorio2-spaced-out"] then
-    local common_compat_prototypess = require("__rubia__.compat.common-compat-prototypes")
     local steel_plate = common_compat_prototypess["steel-plate-recipe"]
     steel_plate.ingredients = {
         {type = "item", name = "iron-plate", amount = 10},
@@ -61,15 +60,21 @@ if mods["bzcarbon"] and mods["Krastorio2-spaced-out"] then
 end
 
 
-if mods["bztin"] or mods["bzlead"] then
+if mods["bztin"] then --or mods["bzlead"] then
     --These mods make chem plants uncraftable
     local minable = data.raw["simple-entity"]["rubia-spidertron-remnants"].minable.results
     table.insert(minable, {type = "item", name = "chemical-plant", 
         probability = 0.4, amount_min = 3, amount_max = 6})
 
-    --These mods make rocket silos uncraftable
+    --Bztin makes rocket silos uncraftable
+    local silo_recipe = common_compat_prototypess["rocket-silo-recipe"]
+    data:extend({silo_recipe})
+    rubia_lib.compat.add_recipe_to_technology("rubia-project-trashdragon", silo_recipe.name)
+    --[[
     local function on_final_fixes()
         rubia_lib.compat.set_recipe_input_count("rocket-silo", "solder", 0, false)
     end
     table.insert(rubia_lib.compat.to_call_on_data_final_fixes, on_final_fixes)
+    ]]
+
 end
